# my-simple-queue-service

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  schemas.py  store.py
tests/: test_queue_api.py
